Ignore pesky pycache files

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,18 @@ __pycache__/run.cpython-311.pyc
 .vscode/launch.json
 ignore/.vscode/launch.json
 ignore/.vscode/settings.json
+local/__pycache__/__init__.cpython-311.pyc
+local/__pycache__/audio.cpython-311.pyc
+local/__pycache__/ball.cpython-311.pyc
+local/__pycache__/bucket.cpython-311.pyc
+local/__pycache__/collision.cpython-311.pyc
+local/__pycache__/config.cpython-310.pyc
+local/__pycache__/config.cpython-311.pyc
+local/__pycache__/load_level.cpython-311.pyc
+local/__pycache__/misc.cpython-311.pyc
+local/__pycache__/peg.cpython-311.pyc
+local/__pycache__/resources.cpython-311.pyc
+local/__pycache__/trajectory.cpython-311.pyc
+local/__pycache__/trigger_events.cpython-311.pyc
+local/__pycache__/vectors.cpython-311.pyc
+.gitignore
