--- a/.gitignore
+++ b/.gitignore
@@ -5,30 +5,4 @@ PegglePy_Demo.mkv
 .vscode/launch.json
 .gitignore
 
-local/__pycache__/__init__.cpython-311.pyc
-local/__pycache__/audio.cpython-311.pyc
-local/__pycache__/ball.cpython-311.pyc
-local/__pycache__/bucket.cpython-311.pyc
-local/__pycache__/collision.cpython-311.pyc
-local/__pycache__/config.cpython-310.pyc
-local/__pycache__/config.cpython-311.pyc
-local/__pycache__/load_level.cpython-311.pyc
-local/__pycache__/misc.cpython-311.pyc
-local/__pycache__/peg.cpython-311.pyc
-local/__pycache__/resources.cpython-311.pyc
-local/__pycache__/trajectory.cpython-311.pyc
-local/__pycache__/trigger_events.cpython-311.pyc
-local/__pycache__/vectors.cpython-311.pyc
-__pycache__/audio.cpython-311.pyc
-__pycache__/ball.cpython-311.pyc
-__pycache__/bucket.cpython-311.pyc
-__pycache__/collision.cpython-311.pyc
-__pycache__/config.cpython-311.pyc
-__pycache__/load_level.cpython-311.pyc
-__pycache__/misc.cpython-311.pyc
-__pycache__/peg.cpython-311.pyc
-__pycache__/resources.cpython-311.pyc
-__pycache__/run.cpython-311.pyc
-__pycache__/trajectory.cpython-311.pyc
-__pycache__/trigger_events.cpython-311.pyc
-__pycache__/vectors.cpython-311.pyc
+__pycache__
