Added 8 new 'official' levels

--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,12 @@ user.cfg
 *.lvl
 !Level 1.lvl
 !Level 2.lvl
+!Level 3.lvl
+!Level 4.lvl
+!Level 5.lvl
+!Level 6.lvl
+!Level 7.lvl
+!Level 8.lvl
+!Level 9.lvl
+!Level 10.lvl
 ```
